# phper

./: .clang-format  .gitignore  .gitmodules  .licenserc.yaml  .rustfmt.toml  Cargo.toml  LICENSE  README.md  rust-toolchain  rust-toolchain.toml
.github/workflows/: ci.yml  license.yml  publish.yml  release-plz.yml
examples/class/: Cargo.toml  Makefile.toml
examples/class/src/: lib.rs
examples/class/tests/: confirm_compiled.php
examples/complex/: Cargo.toml  README.md
examples/complex/src/: lib.rs
examples/complex/tests/: integration.rs
examples/complex/tests/php/: test.php
examples/hello/: .gitignore  Cargo.toml  README.md  build.rs  config.m4  package.xml
examples/hello-class/: Cargo.toml
examples/hello-class/src/: lib.rs
examples/hello-class/tests/: integration.rs
examples/hello-class/tests/php/: test.php
examples/hello/src/: _reexport.rs  lib.rs
examples/hello/tests/: integration.rs
examples/hello/tests/php/: test.php
examples/http-client/: Cargo.toml  README.md  build.rs
examples/http-client/.cargo/: config.toml
examples/http-client/src/: _reexport.rs  client.rs  errors.rs  http_client.rs  lib.rs  main.rs  request.rs  response.rs  utils.rs
examples/http-client/tests/: integration.rs
examples/http-client/tests/php/: router.php  test.php
examples/http-server/: Cargo.toml  README.md  build.rs
examples/http-server/src/: _reexport.rs  errors.rs  lib.rs  request.rs  response.rs  server.rs  utils.rs
examples/http-server/tests/: integration.rs
examples/http-server/tests/php/: test.php
examples/log/: Cargo.toml  README.md
examples/log/src/: lib.rs
examples/log/tests/: integration.rs
examples/log/tests/php/: test_php_notice.php  test_php_say.php
examples/logging/: Cargo.toml  README.md  build.rs
examples/logging/src/: _reexport.rs  lib.rs  main.rs
examples/logging/tests/: integration.rs
examples/logging/tests/php/: test_php_deprecated.php  test_php_error.php  test_php_notice.php  test_php_say.php  test_php_warning.php
examples/mini-curl/: Cargo.toml  Makefile.toml
examples/mini-curl/src/: lib.rs
examples/mini-curl/tests/php/: test.php
examples/simple/: Cargo.toml  Makefile.toml
examples/simple/src/: lib.rs
examples/simple/tests/: confirm_compiled.php  integration.rs
examples/simple/tests/php/: test.php
phper/: CHANGELOG.md  Cargo.toml  build.rs
phper-alloc/: CHANGELOG.md  Cargo.toml  README.md
phper-alloc/src/: lib.rs  macros.rs
phper-build/: CHANGELOG.md  Cargo.toml  README.md
phper-build/src/: lib.rs
phper-doc/: CHANGELOG.md  Cargo.toml  README.md
phper-doc/doc/_01_introduction/: index.md
phper-doc/doc/_02_quick_start/: index.md
phper-doc/doc/_02_quick_start/_01_write_your_first_extension/: index.md
phper-doc/doc/_02_quick_start/_02_write_a_simple_http_client/: index.md
phper-doc/doc/_03_integrate_with_pecl/: index.md
phper-doc/doc/_04_zval/: index.md
phper-doc/doc/_05_internal_types/: index.md
phper-doc/doc/_05_internal_types/_01_z_str/: index.md
phper-doc/doc/_05_internal_types/_02_z_arr/: index.md
phper-doc/doc/_05_internal_types/_03_z_obj/: index.md
phper-doc/doc/_06_class_and_object/: index.md
phper-doc/doc/_06_module/: index.md
phper-doc/doc/_06_module/_01_hooks/: index.md
phper-doc/doc/_06_module/_02_register_functions/: index.md
phper-doc/doc/_06_module/_03_register_constants/: index.md
phper-doc/doc/_06_module/_04_register_ini_settings/: index.md
phper-doc/doc/_06_module/_05_extension_information/: index.md
phper-doc/doc/_06_module/_06_register_class/: index.md
phper-doc/doc/_06_module/_07_register_interface/: index.md
phper-doc/doc/_06_module/_08_register_enum/: index.md
phper-doc/src/: lib.rs
phper-macros/: CHANGELOG.md  Cargo.toml  README.md
phper-macros/src/: alloc.rs  derives.rs  globals.rs  inner.rs  lib.rs  utils.rs
phper-macros/tests/: integration.rs  lib.rs
phper-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs  php_wrapper.c  php_wrapper.h
phper-sys/src/: lib.rs  macro.rs  macros.rs
phper-sys/src/zend/: mod.rs  zend_alloc.rs  zend_api.rs  zend_compile.rs  zend_ini.rs  zend_string.rs  zend_types.rs
phper-test/: CHANGELOG.md  Cargo.toml  README.md
phper-test/etc/: php-fpm.conf
phper-test/src/: cargo.rs  cli.rs  context.rs  fpm.rs  lib.rs  log.rs  utils.rs
phper/src/: alloc.rs  arrays.rs  classes.rs  cmd.rs  constants.rs  context.rs  enums.rs  error.rs  errors.rs  exceptions.rs  function.rs  functions.rs  ini.rs  lib.rs  logs.rs  macros.rs  module.rs  modules.rs  objects.rs  output.rs  references.rs  resources.rs  strings.rs  throws.rs  types.rs  utils.rs  values.rs
phper/src/builder/: argument.rs  classish.rs  constants.rs  data_type.rs  describe.rs  enums.rs  function.rs  handler.rs  mod.rs  traits.rs  value.rs
phper/src/main/: mod.rs  php.rs
phper/src/zend/: api.rs  classes.rs  compile.rs  exceptions.rs  ini.rs  mod.rs  modules.rs  types.rs
tests/integration/: Cargo.toml
tests/integration/src/: _reexport.rs  arguments.rs  arrays.rs  classes.rs  constants.rs  enums.rs  errors.rs  execute_data.rs  functions.rs  ini.rs  lib.rs  macros.rs  main.rs  objects.rs  references.rs  strings.rs  typehints.rs  values.rs
tests/integration/tests/: cli.rs  fpm.rs  integration.rs
tests/integration/tests/common/: mod.rs
tests/integration/tests/php/: _common.php  arguments.php  arrays.php  classes.php  constants.php  enums.php  errors.php  execute_data.php  functions.php  ini.php  macros.php  objects.php  phpinfo.php  references.php  reflection.php  strings.php  typehints.php  values.php
