# Copyright (c) 2022 PHPER Framework Team
# PHPER is licensed under Mulan PSL v2.
# You can use this software according to the terms and conditions of the Mulan
# PSL v2. You may obtain a copy of Mulan PSL v2 at:
#          http://license.coscl.org.cn/MulanPSL2
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY
# KIND, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO
# NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
# See the Mulan PSL v2 for more details.

[workspace]
members = [
    "phper",
    "phper-alloc",
    "phper-build",
    "phper-macros",
    "phper-sys",
    "phper-test",
    "phper-doc",

    # internal
    "examples/complex",
    "examples/hello",
    "examples/http-client",
    "examples/http-server",
    "examples/logging",
    "tests/integration",
]

[workspace.package]
version = "0.10.0"
authors = ["PHPER Framework Team", "jmjoy <jmjoy@apache.org>"]
edition = "2021"
license = "MulanPSL-2.0"
repository = "https://github.com/jmjoy/phper.git"
rust-version = "1.65"
