# Copyright (c) 2022 PHPER Framework Team
# PHPER is licensed under Mulan PSL v2.
# You can use this software according to the terms and conditions of the Mulan
# PSL v2. You may obtain a copy of Mulan PSL v2 at:
#          http://license.coscl.org.cn/MulanPSL2
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY
# KIND, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO
# NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
# See the Mulan PSL v2 for more details.

[workspace]
resolver = "2"
members = [
    "phper",
    "phper-alloc",
    "phper-build",
    "phper-macros",
    "phper-sys",
    "phper-test",
    "phper-doc",

    # internal
    "examples/*",
    "tests/integration",
]

[workspace.package]
version = "0.14.1"
authors = ["PHPER Framework Team", "jmjoy <jmjoy@apache.org>"]
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/phper-framework/phper"
rust-version = "1.85"

[workspace.dependencies]
phper = { version = "0.14.1", path = "./phper" }
phper-alloc = { version = "0.14.1", path = "./phper-alloc" }
phper-build = { version = "0.14.1", path = "./phper-build" }
phper-macros = { version = "0.14.1", path = "./phper-macros" }
phper-sys = { version = "0.14.1", path = "./phper-sys" }
phper-test = { version = "0.14.1", path = "./phper-test" }
