# Copyright (c) 2019 jmjoy
# PHPER is licensed under Mulan PSL v2.
# You can use this software according to the terms and conditions of the Mulan
# PSL v2. You may obtain a copy of Mulan PSL v2 at:
#          http://license.coscl.org.cn/MulanPSL2
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY
# KIND, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO
# NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
# See the Mulan PSL v2 for more details.

[package]
name = "phper-alloc"
version = "0.4.0-alpha.3"
authors = ["jmjoy <918734043@qq.com>"]
edition = "2021"
rust-version = "1.56"
description = "Alloc related items for phper crate."
repository = "https://github.com/jmjoy/phper.git"
license = "MulanPSL-2.0"
keywords = ["php", "alloc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phper-sys = { version = "0.4.0-alpha.3", path = "../phper-sys" }

[build-dependencies]
phper-build = { version = "0.4.0-alpha.3", path = "../phper-build" }
