# Copyright (c) 2022 PHPER Framework Team
# PHPER is licensed under Mulan PSL v2.
# You can use this software according to the terms and conditions of the Mulan
# PSL v2. You may obtain a copy of Mulan PSL v2 at:
#          http://license.coscl.org.cn/MulanPSL2
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY
# KIND, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO
# NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
# See the Mulan PSL v2 for more details.

[package]
name = "phper-alloc"
version = "0.5.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Alloc related items for phper crate."
repository.workspace = true
license.workspace = true
keywords = ["php", "alloc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phper-sys = { version = "0.5.1", path = "../phper-sys" }

[build-dependencies]
phper-build = { version = "0.5.1", path = "../phper-build" }
