[package]
name = "phper-build"
version = "0.4.0-alpha.2"
authors = ["jmjoy <918734043@qq.com>"]
edition = "2021"
rust-version = "1.56"
description = "Generates stubs for project using phper."
repository = "https://github.com/jmjoy/phper.git"
license = "Unlicense"
keywords = ["php", "binding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phper-sys = { version = "0.4.0-alpha.2", path = "../phper-sys" }
