# Copyright (c) 2019 jmjoy
# PHPER is licensed under Mulan PSL v2.
# You can use this software according to the terms and conditions of the Mulan
# PSL v2. You may obtain a copy of Mulan PSL v2 at:
#          http://license.coscl.org.cn/MulanPSL2
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY
# KIND, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO
# NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
# See the Mulan PSL v2 for more details.

[package]
name = "phper-build"
version = "0.5.0"
authors = ["PHPER Framework Team", "jmjoy <jmjoy@apache.org>"]
edition = "2021"
rust-version = "1.56"
description = "Generates stubs for project using phper."
repository = "https://github.com/jmjoy/phper.git"
license = "MulanPSL-2.0"
keywords = ["php", "binding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phper-sys = { version = "0.5.0", path = "../phper-sys" }
