# Copyright (c) 2022 PHPER Framework Team
# PHPER is licensed under Mulan PSL v2.
# You can use this software according to the terms and conditions of the Mulan
# PSL v2. You may obtain a copy of Mulan PSL v2 at:
#          http://license.coscl.org.cn/MulanPSL2
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY
# KIND, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO
# NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
# See the Mulan PSL v2 for more details.

[package]
name = "phper-macros"
version = "0.5.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "The proc-macros for phper crate."
repository.workspace = true
license.workspace = true
keywords = ["php", "proc-macro"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.21"
syn = { version = "1.0.101", features = ["full"] }
proc-macro2 = "1.0.44"

[dev-dependencies]
syn = { version = "1.0.101", features = ["full", "extra-traits"] }
