# Copyright (c) 2022 PHPER Framework Team
# PHPER is licensed under Mulan PSL v2.
# You can use this software according to the terms and conditions of the Mulan
# PSL v2. You may obtain a copy of Mulan PSL v2 at:
#          http://license.coscl.org.cn/MulanPSL2
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY
# KIND, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO
# NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
# See the Mulan PSL v2 for more details.

[package]
name = "phper-test"
description = "PHPer testing utilities."
keywords = ["php", "binding"]
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[features]
fpm = ["fastcgi-client", "tokio/full"]

[dependencies]
fastcgi-client = { version = "0.8.0", optional = true }
libc = "0.2.137"
once_cell = "1.16.0"
phper-macros = { version = "0.10.2", path = "../phper-macros" }
tempfile = "3.3.0"
tokio = { version = "1.22.0", optional = true }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
