# Copyright (c) 2022 PHPER Framework Team
# PHPER is licensed under Mulan PSL v2.
# You can use this software according to the terms and conditions of the Mulan
# PSL v2. You may obtain a copy of Mulan PSL v2 at:
#          http://license.coscl.org.cn/MulanPSL2
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY
# KIND, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO
# NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
# See the Mulan PSL v2 for more details.

[package]
name = "phper-test"
description = "PHPer testing utilities."
keywords = ["php", "binding"]
version = "0.15.1"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
cargo_metadata = "0.20.0"
env_logger = { version = "0.11.8", features = ["kv"] }
fastcgi-client = "0.9.0"
libc = "0.2.169"
log = { version = "0.4.27", features = ["kv"] }
phper-macros = { workspace = true }
rust-ini = "0.21.1"
tempfile = "3.17.1"
tokio = { version = "1.43.0", features = ["net"] }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
