# Copyright (c) 2022 PHPER Framework Team
# PHPER is licensed under Mulan PSL v2.
# You can use this software according to the terms and conditions of the Mulan
# PSL v2. You may obtain a copy of Mulan PSL v2 at:
#          http://license.coscl.org.cn/MulanPSL2
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY
# KIND, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO
# NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
# See the Mulan PSL v2 for more details.

[package]
name = "phper"
description = "The framework that allows us to write PHP extensions using pure and safe Rust whenever possible."
documentation = "https://docs.rs/phper"
readme = "README.md"
keywords = ["php", "binding", "extension", "module"]
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
derive_more = "0.99.17"
indexmap = "1.9.2"
once_cell = "1.16.0"
phper-alloc = { version = "0.10.2", path = "../phper-alloc" }
phper-macros = { version = "0.10.2", path = "../phper-macros" }
phper-sys = { version = "0.10.2", path = "../phper-sys" }
thiserror = "1.0.37"

[build-dependencies]
phper-build = { version = "0.10.2", path = "../phper-build" }
phper-sys = { version = "0.10.2", path = "../phper-sys" }
