# Copyright (c) 2022 PHPER Framework Team
# PHPER is licensed under Mulan PSL v2.
# You can use this software according to the terms and conditions of the Mulan
# PSL v2. You may obtain a copy of Mulan PSL v2 at:
#          http://license.coscl.org.cn/MulanPSL2
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY
# KIND, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO
# NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
# See the Mulan PSL v2 for more details.

[package]
name = "phper"
description = "The framework that allows us to write PHP extensions using pure and safe Rust whenever possible."
documentation = "https://docs.rs/phper"
readme = "README.md"
keywords = ["php", "binding", "extension", "module"]
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
cfg-if = "1.0.0"
derive_more = { version = "2.0.1", features = ["from", "constructor"] }
indexmap = "2.7.1"
once_cell = "1.20.3"
phper-alloc = { workspace = true }
phper-macros = { workspace = true }
phper-sys = { workspace = true }
thiserror = "2.0.11"

[build-dependencies]
phper-build = { workspace = true }
phper-sys = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(phper_major_version, values("7"))',
    'cfg(phper_major_version, values("8"))',
    'cfg(phper_minor_version, values("0"))',
    'cfg(phper_minor_version, values("1"))',
    'cfg(phper_minor_version, values("2"))',
    'cfg(phper_minor_version, values("3"))',
    'cfg(phper_minor_version, values("4"))',
    'cfg(phper_zts)',
] }
