[package]
name = "hello_class"
version = "0.2.0"
authors = ["jmjoy <918734043@qq.com>"]
edition = "2018"
publish = false
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
phper = { version = "0.2", path = "../../phper" }

[dev-dependencies]
phper-test = { version = "0.2", path = "../../phper-test" }

[build-dependencies]
phper-build = { version = "0.2", path = "../../phper-build" }
