[package]
name = "hello"
version = "0.0.0"
authors = ["jmjoy <918734043@qq.com>"]
edition = "2021"
rust-version = "1.56"
publish = false
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
phper = { version = "0.3.0", path = "../../phper" }

[dev-dependencies]
phper-test = { version = "0.3.0", path = "../../phper-test" }

[build-dependencies]
phper-build = { version = "0.3.0", path = "../../phper-build" }
