# Copyright (c) 2022 PHPER Framework Team
# PHPER is licensed under Mulan PSL v2.
# You can use this software according to the terms and conditions of the Mulan
# PSL v2. You may obtain a copy of Mulan PSL v2 at:
#          http://license.coscl.org.cn/MulanPSL2
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY
# KIND, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO
# NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
# See the Mulan PSL v2 for more details.

[package]
name = "http-client"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
license.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0.66"
bytes = "1.3.0"
indexmap = "1.9.2"
phper = { version = "0.6.0", path = "../../phper" }
reqwest = { version = "0.11.13", features = ["blocking", "cookies"] }
thiserror = "1.0.37"

[dev-dependencies]
phper-test = { version = "0.6.0", path = "../../phper-test" }
