# Copyright (c) 2022 PHPER Framework Team
# PHPER is licensed under Mulan PSL v2.
# You can use this software according to the terms and conditions of the Mulan
# PSL v2. You may obtain a copy of Mulan PSL v2 at:
#          http://license.coscl.org.cn/MulanPSL2
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY
# KIND, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO
# NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
# See the Mulan PSL v2 for more details.

[package]
name = "phper-example-http-server"
version = "0.0.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
publish = false
license = { workspace = true }

[lib]
name = "http_server"
crate-type = ["lib", "cdylib"]

[dependencies]
hyper = { version = "1.4.1", features = ["http1", "server"] }
axum = "0.7.5"
phper = { workspace = true }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
reqwest = { version = "0.12.5", features = ["blocking"] }

[dev-dependencies]
phper-test = { workspace = true }
reqwest = "0.12.5"
