[package]
name = "logging"
version = "0.0.0"
authors = ["jmjoy <918734043@qq.com>"]
edition = "2021"
rust-version = "1.56"
publish = false
license = "MulanPSL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
phper = { version = "0.4.0-alpha.2", path = "../../phper" }

[dev-dependencies]
phper-test = { version = "0.4.0-alpha.2", path = "../../phper-test" }

[build-dependencies]
phper-build = { version = "0.4.0-alpha.2", path = "../../phper-build" }
