# Copyright (c) 2022 PHPER Framework Team
# PHPER is licensed under Mulan PSL v2.
# You can use this software according to the terms and conditions of the Mulan
# PSL v2. You may obtain a copy of Mulan PSL v2 at:
#          http://license.coscl.org.cn/MulanPSL2
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY
# KIND, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO
# NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
# See the Mulan PSL v2 for more details.

[package]
name = "logging"
version = "0.0.0"
authors = ["PHPER Framework Team", "jmjoy <jmjoy@apache.org>"]
edition = "2021"
rust-version = "1.56"
publish = false
license = "MulanPSL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

# This example is hack to used for integration tests.
[[example]]
name = "logging"
path = "src/_reexport.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.58"
phper = { version = "0.5.0", path = "../../phper" }

[dev-dependencies]
phper-test = { version = "0.5.0", path = "../../phper-test" }

[build-dependencies]
phper-build = { version = "0.5.0", path = "../../phper-build" }
