[package]
name = "simple"
version = "0.0.0"
authors = ["__JM_Joy__ <918734043@qq.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "simple"
crate-type = ["cdylib"]

[dependencies]
phper = { version = "0.2", path = "../../phper" }
