[package]
name = "integration"
version = "0.0.0"
authors = ["jmjoy <918734043@qq.com>"]
edition = "2021"
rust-version = "1.56"
publish = false
license = "MulanPSL-2.0"

[lib]
crate-type = ["lib", "cdylib"]

# This example is hack to used for integration tests.
[[example]]
name = "integration"
path = "src/_reexport.rs"
crate-type = ["cdylib"]

[dependencies]
indexmap = "1.9.1"
phper = { version = "0.4.0-alpha.3", path = "../../phper" }

[dev-dependencies]
phper-test = { version = "0.4.0-alpha.3", path = "../../phper-test", features = ["fpm"] }
