# Copyright (c) 2022 PHPER Framework Team
# PHPER is licensed under Mulan PSL v2.
# You can use this software according to the terms and conditions of the Mulan
# PSL v2. You may obtain a copy of Mulan PSL v2 at:
#          http://license.coscl.org.cn/MulanPSL2
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY
# KIND, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO
# NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
# See the Mulan PSL v2 for more details.

[package]
name = "integration"
version = "0.0.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
publish = false
license = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
indexmap = "2.7.1"
phper = { workspace = true }

[dev-dependencies]
env_logger = { version = "0.11.8", features = ["kv"] }
log = { version = "0.4.27", features = ["kv"] }
phper-test = { workspace = true }
tokio = { version = "1.43.0", features = ["full"] }

[build-dependencies]
phper-build = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(phper_major_version, values(any()))',
    'cfg(phper_minor_version, values(any()))',
] }
